# LincolnAgencyAI

./: .env.example  .gitignore  .replit  main.py  orchestrator.py  pyproject.toml  replit.md  requirements.txt
.github/workflows/: .flake8  deploy.yml  python-app.yml
agents/: __init__.py  code_reviewer.py  code_writer.py  content_agent.py  email_notifier.py  fulfillment_agent.py  gemini_adapter.py  gig_hunter.py  outreach_agent.py  product_factory.py
data/queue/: orchestrator_20250910_173414.json  orchestrator_20250910_173614.json  orchestrator_20250910_173814.json  orchestrator_20250910_174014.json  orchestrator_20250910_174214.json  orchestrator_20250910_174414.json  orchestrator_20250910_174614.json  orchestrator_20250910_174814.json  orchestrator_20250910_175014.json  orchestrator_20250910_175214.json  orchestrator_20250910_175414.json  orchestrator_20250910_175614.json  orchestrator_20250910_175644.json  orchestrator_20250910_175726.json  orchestrator_20250910_175926.json  orchestrator_20250910_180126.json  orchestrator_20250910_180326.json  orchestrator_20250910_180526.json  orchestrator_20250910_180726.json  orchestrator_20250910_180926.json  orchestrator_20250910_181126.json  orchestrator_20250910_181326.json  orchestrator_20250910_181526.json  orchestrator_20250910_181726.json  orchestrator_20250910_181926.json  orchestrator_20250910_182126.json  orchestrator_20250910_182326.json  (+50 more)
templates/: code_reviewer.html  code_writer.html  content_agent.html  dashboard.html  fulfillment_agent.html  gig_hunter.html  outreach_agent.html  product_factory.html
