[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "openai>=1.107.1",
    "python-dotenv>=1.1.1",
    "sendgrid>=6.12.4",
    "trafilatura>=2.0.0",
    "uvicorn>=0.35.0",
]
